--- a/pom.xml
+++ b/pom.xml
@@ -278,7 +278,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.example.myheadachediary/com.example.myheadachediary.LauncherApp
+                            <mainClass>com.example.myheadachediary/com.example.myheadachediary.tools.LauncherApp
                             </mainClass>
                         </configuration>
                     </execution>
