--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,4 @@
-theme: jekyll-theme-cayman
+tagline: An utility diary for migraineurs
+theme: jekyll-theme-cayman  
+theme_mode: dark
+title: My headache diary
